<resources>
    <string name="app_name">Shop Hai</string>
    <string name="shopit">ShopIT</string>
    <string name="shophai">ShopHai</string>
    <string name="hi_john">Hi John</string>
    <string name="all">All</string>
    <string name="electronics">electronics</string>
    <string name="jewellery">jewelery</string>
    <string name="d_reviews">%d Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="usd">USD</string>
    <string name="price">USD %s</string>
    <string name="women_s_clothing">women\'s clothing</string>
    <string name="men_s_clothing">men\'s clothing</string>
    <string name="shop_from_our_stores_with_ease">Shop from our stores with ease</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">Sign in</string>
    <string name="didn_t_have_any_account_sign_up_here">Didn\'t have any account? Sign up here</string>
    <string name="text_validation_success">Text Validation Success</string>
    <string name="text_validation_error_empty_field">Please fill empty field</string>
    <string name="text_validation_error_min_pass_len">Your password must be a minimum of 6 characters</string>
    <string name="text_validation_error_max_pass_len">Your password cannot be more than 12 characters</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="profile">Profile</string>
    <string name="john_doe">john doe</string>
    <string name="john_gmail_com">john@gmail.com</string>
    <string name="general">General</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="notifications">Notifications</string>
    <string name="wishlist">Wishlist</string>
    <string name="legal">Legal</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_pilocy">Privacy Pilocy</string>
    <string name="personal">Personal</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="logout">Logout</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="search">Search</string>
</resources>