<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.ProfileFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_left">

        <TextView
            android:id="@+id/tv_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/profile"
            android:textSize="18sp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/avater"
        android:layout_marginStart="@dimen/basic_margin"
        android:layout_marginTop="@dimen/basic_margin"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_doe"
        android:textSize="18sp"
        android:layout_marginStart="@dimen/small_margin"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintTop_toTopOf="@id/iv_avatar"
        app:layout_constraintStart_toEndOf="@id/iv_avatar"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/john_gmail_com"
        android:textSize="18sp"
        android:fontFamily="@font/opens_sans"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="@id/tv_name"/>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        android:layout_marginTop="@dimen/other_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general"
        android:textSize="16sp"
        android:fontFamily="@font/opens_sans"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_edit_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="18sp"
        android:paddingVertical="@dimen/medium_margin"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_general"
        app:layout_constraintStart_toStartOf="@id/tv_general"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_notifications"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="18sp"
        android:paddingVertical="@dimen/medium_margin"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider2"
        app:layout_constraintStart_toStartOf="@id/divider2"/>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_notifications"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tv_wishlist"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/wishlist"
        android:textSize="18sp"
        android:paddingVertical="@dimen/medium_margin"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintTop_toBottomOf="@id/divider3"
        app:layout_constraintStart_toStartOf="@id/divider3"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_wishlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_legal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/legal"
        android:textSize="16sp"
        android:fontFamily="@font/opens_sans"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/divider4"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_terms_of_use"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:paddingVertical="@dimen/medium_margin"
        android:text="@string/terms_of_use"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_legal"
        app:layout_constraintTop_toBottomOf="@id/tv_legal" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_of_use"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_privacy_pilocy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/privacy_pilocy"
        android:textSize="18sp"
        android:paddingVertical="@dimen/medium_margin"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintTop_toBottomOf="@id/divider5"
        app:layout_constraintStart_toStartOf="@id/divider5"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_privacy_pilocy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_personal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:textSize="16sp"
        android:fontFamily="@font/opens_sans"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/divider6"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_report_bug"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/report_a_bug"
        android:textSize="18sp"
        android:paddingVertical="@dimen/medium_margin"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintTop_toBottomOf="@id/tv_personal"
        app:layout_constraintStart_toStartOf="@id/tv_personal"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_report_bug"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="18sp"
        android:paddingVertical="@dimen/medium_margin"
        android:fontFamily="@font/open_sans_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider7"
        app:layout_constraintStart_toStartOf="@id/divider7"/>

    <View
        android:id="@+id/divider8"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        android:layout_marginHorizontal="@dimen/medium_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>