<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/other_margin"
    tools:context=".ui.auth.login.LoginFragment">


    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?attr/textAppearanceHeadline4"
        android:textColor="@color/green"
        android:fontFamily="@font/open_sans_bold"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_marginStart="@dimen/another_margin"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/img_app_logo"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@drawable/ic_logo"
        android:layout_marginEnd="@dimen/small_padding"
        app:layout_constraintTop_toTopOf="@id/txt_app_name"
        app:layout_constraintEnd_toStartOf="@id/txt_app_name"/>

    <TextView
        android:id="@+id/txt_app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_from_our_stores_with_ease"
        android:fontFamily="@font/open_sans_medium"
        android:layout_marginTop="@dimen/small_margin"
        app:layout_constraintTop_toBottomOf="@id/txt_app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        app:boxCornerRadiusTopStart="@dimen/basic_margin"
        app:boxCornerRadiusTopEnd="@dimen/basic_margin"
        app:boxCornerRadiusBottomEnd="@dimen/basic_margin"
        app:boxCornerRadiusBottomStart="@dimen/basic_margin"
        android:layout_marginTop="@dimen/button_height"
        app:layout_constraintTop_toBottomOf="@id/txt_app_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="@dimen/medium_margin"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxCornerRadiusTopStart="@dimen/basic_margin"
        app:boxCornerRadiusTopEnd="@dimen/basic_margin"
        app:boxCornerRadiusBottomEnd="@dimen/basic_margin"
        app:boxCornerRadiusBottomStart="@dimen/basic_margin"
        android:layout_marginTop="@dimen/basic_margin"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock"
            android:singleLine="true"
            android:inputType="textPassword"
            android:drawablePadding="@dimen/medium_margin"/>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:fontFamily="@font/open_sans_medium"
        android:layout_marginTop="@dimen/basic_margin"
        app:layout_constraintTop_toBottomOf="@+id/til_password"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:text="@string/sign_in"
        android:textSize="16sp"
        android:fontFamily="@font/opens_sans_regular"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/basic_margin"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_login_descrption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/basic_margin"
        android:text="@string/didn_t_have_any_account_sign_up_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/small_padding"
        app:layout_constraintTop_toBottomOf="@id/tv_login_descrption"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>