<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/avatar_image"
                android:layout_width="@dimen/image_size"
                android:layout_height="@dimen/image_size"
                android:src="@drawable/avater"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <ImageView
                android:id="@+id/app_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/avatar_image"
                android:layout_marginTop="@dimen/basic_margin"
                android:layout_marginStart="@dimen/big_margin"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shophai"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/app_logo"
                app:layout_constraintStart_toEndOf="@id/app_logo"
                android:textAppearance="?attr/textAppearanceBody2"/>

            <ImageView
                android:id="@+id/cart_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_cart"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/basic_margin"
                android:layout_marginEnd="@dimen/small_margin"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                app:layout_constraintTop_toTopOf="@id/cart_icon"
                app:layout_constraintEnd_toStartOf="@id/cart_icon"
                android:layout_marginEnd="@dimen/small_margin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.MaterialToolbar>


    <TextView
        android:id="@+id/greeting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_john"
        tools:text="HI John"
        android:textAppearance="?attr/textAppearanceBody1"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_goneMarginStart="@dimen/basic_margin"
        android:layout_marginStart="@dimen/basic_margin"
        app:layout_constraintStart_toStartOf="parent"/>
    
    <TextView
        android:id="@+id/description_tex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="What are you looking for              today?"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:layout_marginStart="@dimen/basic_margin"
        app:layout_constraintTop_toBottomOf="@id/greeting_name"
        app:layout_constraintStart_toStartOf="@id/greeting_name"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/category_chips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_tex"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/basic_margin"
        app:singleLine="true" >


        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/electronics"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jewellery"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/men_s_clothing"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="electronics"/>

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="electronics"/>

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_chips"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>